# Project-M11

./: .gitignore  Finishing plan brief.txt  LICENSE  MVP_GUIDE.md  laptop_monitor_gaps_context.md  timekeeper_gaps_context.md  vercel.json
.claude/: settings.local.json
design_handoff_timekeeper/: README.md
design_handoff_timekeeper/design-references/: v2-calm-spec.md
design_handoff_timekeeper/design-references/caregiver-app/: Caregiver App.html  app-screens.jsx  app-shell.jsx  app-tokens.jsx  app-ui.jsx  icons.jsx
design_handoff_timekeeper/design-references/watch-ui/: Watch UI - LVGL.html  lvgl-screens.jsx  lvgl-tokens.jsx
presentation/: index.html  serve.js
timekeeper/: .env.example  .gitignore  IMPLEMENTATION.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
timekeeper/apps/caregiver/: capacitor.config.ts  index.html  package.json  tsconfig.tsbuildinfo
timekeeper/apps/caregiver/src/: App.tsx  (+2 more)
timekeeper/apps/firmware/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
timekeeper/apps/firmware-mockup/: CMakeLists.txt  README.md  sdkconfig.defaults
timekeeper/apps/firmware/main/: CMakeLists.txt  idf_component.yml  main.c
timekeeper/apps/firmware/main/ble/: ble_gatt.c  ble_gatt.h  sync.c
timekeeper/apps/firmware/main/storage/: nvs_store.c
timekeeper/apps/firmware/main/tasks/: haptics.c  scheduler.c  scheduler.h
timekeeper/apps/firmware/main/ui/: ui_active.c  ui_confirm.c  ui_home.c  ui_list.c  ui_missed.c  ui_pair.c  ui_reminder.c  ui_reward.c  ui_theme.c  ui_theme.h
timekeeper/scripts/: demo.cjs
(+58 files in other folders)
